# snow

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  BUGS.md  CLAUDE.md  DIARY.md  FEATURES.md  LICENSE  LOGO_RESEARCH.md  PROGRESS.md  README.md  claude.md  progress.md  review.md
backend/: pyproject.toml  requirements-lambda.txt  requirements.txt  resorts-to-fix.md  template.yaml
backend/data/: indy_pass_matches.json  resort_logos.json  resort_trail_maps.json  resorts.json  resorts_scraped.json  snowforecast_slugs.json
backend/scripts/: backfill_historical_data.py  cleanup_scraped_resorts.py  debug_forecast_drops.py  enrich_annual_snowfall.py  enrich_elevations.py  enrich_resort_data.py  enrich_resorts.py  enrich_run_percentages.py  find_resort_logos.py  fix_trail_maps_and_logos.py  generate_resorts.py  geocode_remaining.py  geocode_resorts.py  manage_resort_versions.py  populate_resorts.py  precache_pistes.py  run_local.sh  scrape_indy_pass.py  scrape_resorts.py  scrape_trail_maps.py  seed_chat_suggestions.py  seed_resorts.py  spot_check_100.py  validate_resorts.py
backend/src/: run.sh
backend/tests/: __init__.py  conftest.py  test_api_handler.py  test_auth_service.py  test_cache.py  test_chat_endpoints.py  test_chat_service.py  test_chat_stream_handler.py  test_condition_report_endpoints.py  test_condition_report_service.py  test_daily_history_service.py  test_dynamodb_utils.py  test_geo_utils.py  test_ml_scorer.py  test_models.py  test_multi_source_merger.py  test_notification.py  test_notification_history_service.py  test_notification_service.py  test_onthesnow_merge.py  test_openmeteo_service.py  test_openmeteo_snow_depth.py  (+19 more)
(+547 files in other folders)
