[project]
name = "snow-quality-tracker"
version = "0.1.0"
description = "Snow quality tracking backend for ski resorts"
requires-python = ">=3.11"

[tool.ruff]
# Same line length as the old black config
line-length = 88
target-version = "py311"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

# Ignore certain rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "F401",   # unused imports (sometimes needed for re-exports)
    "F841",   # unused variables (sometimes useful during development)
    "UP035",  # typing.Dict/List deprecated - will migrate gradually
    "B904",   # raise from err - will fix gradually (many occurrences)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "strict"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
